sticky header created and spacings fixed

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,19 @@
   height: var(--header-height);
   display: flex;
   align-items: center;
-  padding: 0 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 99999;
+  background-color: var(--app-bg);
+  transition: top var(--transition);
+}
+
+.header.hide {
+  top: calc(var(--header-height) * -1);
+}
+
+.header.show {
+  top: 0;
 }
 
 .nav {
